@@ -5495,3 +5495,4 @@ v0.92.0.11:
     - Toggles a town's neutral status.
     - Otherwise unused for now.
   - API: Added TownToggleNeutralEvent.
+  - Fix Sender cannot be null! message seen when outlaw add/remove is done on an offline player.
